--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div class="circle"></div>
             </div>
             <div class="acads">
-                <div>Master of Science<br>Power Engineering<br>Nanyang Technological University</div>
+                <div id="main-acad">Master of Science<br>Power Engineering<br>Nanyang Technological University</div>
 
-                <div id="main-acad">Project Associate<br>echem@iitb<br>Indian Institute of Technology,
+                <div>Project Associate<br>echem@iitb<br>Indian Institute of Technology,
                     Bombay</div>
 
                 <div>Bachelor of Technology<br>Electrical Engineering<br>Indian Institute of Technology,
