--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
         <div class="home-right">
             <div class="line">
-                <div class="circle"></div>
                 <div class="circle" id="main-circle"></div>
+                <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -61,8 +61,8 @@
                 <div>Project Intern<br>Drona Aviation<br>Mumbai</div>
             </div>
             <div class="years">
-                <div>2022-23</div>
-                <div id="main-year">2021</div>
+                <div id="main-year">2022-23</div>
+                <div>2021</div>
                 <div>2016-20</div>
                 <div>2019</div>
                 <div>2017</div>
